trello/src/App.css
html {
  min-height: 100%;
  min-width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  background-image: linear-gradient(180deg, #3eb8de 0%, #347cdb 100%);
}

body {
  font-family: 'Merriweather Sans', sans-serif;
  height: 100%;
  margin: 0;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  box-shadow: 0px 0px 20px 5px rgba(50, 50, 50, 0.5);
  margin-bottom: 20px;
}

h1, h2 {
  color: white;
  background-color: rgba(50, 50, 50, 0.35);
  border-radius: 8px;
  padding: 13px;
  min-height: 30px;
  max-height: 30px;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 15px;
  font-weight: 600;
  transition: all 0.15s ease-in-out;
  user-select: none;
}

.add-button:hover, .back-button:hover {
  cursor: pointer;
  background-color: rgba(50, 50, 50, 0.45);
}

.board-name {
  background-color: rgba(50, 50, 50, 0.42);
  
}

.center {
  margin-right: 8px;
  margin-bottom: 0px;
  font-weight: 500;
}

.lessthan {
  margin-right: 8px;
  margin-bottom: -2px;
  font-size: 18px;
  font-weight: 550;
}

.board-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  margin-top: 10px;
  margin-bottom: 40px;
  flex-wrap: wrap;
  /* background-color: ; */
}

.board {
  color: black;
  background-color: #e5f0f5;
  min-width: 500px;
  /* min-height: 500px; */
  max-height: 800px;
  max-width: 500px;
  border-radius: 15px;
  box-shadow: 0px 0px 20px 5px rgba(50, 50, 50, 0.25);
  overflow-y: scroll;
  scrollbar-highlight-color: red;
  scrollbar-width: 100px;
  opacity: 92%;
}

.outer-board {
  overflow: scroll;
  margin: 10px 5px 10px 10px;
  background-color: whitesmoke;
  border-radius: 20px;
}

/* width */
.board::-webkit-scrollbar {
  width: 6.5px;
  background-color: transparent;
  left: -100px;
  overflow: hidden;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1; 
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: rgba(136, 136, 136, 0.897);
  border-radius: 30px; 
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555; 
}

.board > h3 {
  margin-left: 15px;
  margin-top: 15px;
  font-weight: 400;
  width: fit-content;
  padding: 5px;
}

.task {
  background-color: white;
  box-shadow: 0px 0px 10px 2.5px rgba(50, 50, 50, 0.15);
  padding: 15px;
  margin: 15px;
  border-radius: 15px;
  min-height: 30px;
  display: flex;
  flex-direction: column;
  /* max-height: 30px;
  overflow: hidden;
  transition: all 1.5s ease-out; */
}
/* 
.task > div.addDetails {
  visibility: hidden;
}

.task:hover, .task:active {
  max-height: 1000px;
  transition: all 1.2s ease-in;
} */

.task > div {
  padding: 5px;
}

.checklist {
  font-size: 14px;
  margin: 1px;
}

.section-title {
  margin-bottom: 0px;
}

h5.section-title {
  margin-top: 10px;
}

div.note {
  transform: translateX(-3px);
}

div.note, .checklist-wrapper {
  padding: 0px;
  border-radius: 5px;
}

div.note > p, div.note > h5 {
  padding: 5px;
}

div.note > p {
  margin-top: 0;
  padding: 0px 5px;
  font-size: 14px;
}

.widget {
  display: flex;
  flex-direction: column;
  background-color: rgba(50, 50, 50, 0.60);
  width: fit-content;
  height: fit-content;
  padding: 3px 10px 3px 10px;
  border-radius: 10px;
  color: white;
  font-size: 15px;
  opacity: 80%;
  transition: all 0.25s ease-in-out;
  position: fixed;
    bottom: 0;
    right: 0;
  margin: 0px 15px 15px 0px;
  cursor: default;
}

.widget:hover {
  opacity: 100%;
  background-color: rgba(50, 50, 50, 0.65);
}

.widget-name {
  display: flex;
  font-weight: 100;
  font-size: 15px;
  justify-content: center;
  border-bottom: 1px solid whitesmoke;
  margin-bottom: -5.5px;
}

.widget-name > p {
  margin-bottom: -1.5px;
}

.widget-components {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

input.nameTask {
  font-size: 16px;
  font-family: 'Merriweather Sans', sans-serif;
  border: transparent;
  width: 100%;
  border-radius: 5px;
  padding: 1px;
  outline: none;
}

input#addTask.nameTask {
  display: flex;
  align-self: center;
  text-justify: center;
  justify-content: center;
}

input.nameTask:hover, input.nameTask:focus {
  background-color: rgba(220, 220, 220, 0.377);
}


input.nameTask::placeholder {
  font-style: italic;
}

.title-and-delete {
  display: flex;
  justify-content: space-between;
}

#addNote {
  font-size: 16px;
  font-family: 'Merriweather Sans', sans-serif;
  width: 100%;
  border-radius: 5px;
  padding: 5px;
  outline: none;
  resize: none;
  border: transparent;
  background-color: rgba(220, 220, 220, 0.277);
  margin: 10px 0px;
}

#addNote::placeholder {
  font-style: italic;
  padding: 2px;
}

#addNote:hover {
  background-color: rgba(220, 220, 220, 0.5);
}

.generic-button {
  font-family: 'Merriweather Sans', sans-serif;
  padding: 5px;
  margin-right: 10px;
  margin-top: 10px;
  border-radius: 5px;
  background-color: rgba(50, 50, 50, 0.13);
  border: transparent;
  cursor: pointer;
}

.generic-button:hover {
  background-color: rgba(50, 50, 50, 0.20);
}


#submit-button-div {
  margin-top: -15px;
  display:flex;
  flex-direction: column;
  justify-content: center;
  justify-items: center;
  width: fit-content;
}

